kubernetes/configs/assessment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
  creationTimestamp: "2025-02-09T17:34:58Z"
  generation: 5
  labels:
    app: scdb-assessment
  name: scdb-assessment
  namespace: scdb-cnad
  resourceVersion: "705866"
  uid: cfae71e8-8ce5-4327-8321-b2b8efb840ed
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scdb-assessment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-10T02:41:49+08:00"
      creationTimestamp: null
      labels:
        app: scdb-assessment
    spec:
      containers:
      - image: harbor.leezhiwei.com/scdb_assg2/assessment-serv
        imagePullPolicy: Always
        name: assessment-serv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      resources:
        requests:
          cpu: 250m
        limits:
          cpu: 500m 
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-09T17:34:59Z"
    lastUpdateTime: "2025-02-09T18:46:07Z"
    message: ReplicaSet "scdb-assessment-7fccf4dbb8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-09T19:09:38Z"
    lastUpdateTime: "2025-02-09T19:09:38Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
