kubernetes/configs/healthguide-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2025-02-09T17:17:31Z"
  generation: 2
  labels:
    app: scdb-healthguide
  name: scdb-healthguide
  namespace: scdb-cnad
  resourceVersion: "705833"
  uid: 024d8348-4d74-468a-b4b1-ab441ef58533
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scdb-healthguide
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scdb-healthguide
    spec:
      containers:
      - image: harbor.leezhiwei.com/scdb_assg2/healthguide-serv
        imagePullPolicy: Always
        name: healthguide-serv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-09T17:17:29Z"
    lastUpdateTime: "2025-02-09T17:18:04Z"
    message: ReplicaSet "scdb-healthguide-7c9d85f78b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-09T19:09:32Z"
    lastUpdateTime: "2025-02-09T19:09:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
