kubernetes/configs/login-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2025-02-09T17:14:29Z"
  generation: 3
  labels:
    app: scdb-login
  name: scdb-login
  namespace: scdb-cnad
  resourceVersion: "705817"
  uid: 1faf83b4-8e07-41f5-9e3c-cd395a9d0315
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scdb-login
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-10T02:41:49+08:00"
      creationTimestamp: null
      labels:
        app: scdb-login
    spec:
      containers:
      - image: harbor.leezhiwei.com/scdb_assg2/login-serv
        imagePullPolicy: Always
        name: login-serv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-09T17:14:27Z"
    lastUpdateTime: "2025-02-09T18:46:03Z"
    message: ReplicaSet "scdb-login-98484bfbc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-09T19:09:27Z"
    lastUpdateTime: "2025-02-09T19:09:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
