kubernetes/configs/static-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  creationTimestamp: "2025-02-09T17:04:42Z"
  generation: 6
  labels:
    app: scdb-static
  name: scdb-static
  namespace: scdb-cnad
  resourceVersion: "712636"
  uid: cc4bdc8a-25f3-4d97-99d0-4dedcb215540
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scdb-static
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-10T02:41:49+08:00"
      creationTimestamp: null
      labels:
        app: scdb-static
    spec:
      containers:
      - image: harbor.leezhiwei.com/scdb_assg2/static-serv
        imagePullPolicy: Always
        name: static-serv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      resources:
        requests:
          cpu: 250m
        limits:
          cpu: 500m
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-09T17:04:42Z"
    lastUpdateTime: "2025-02-09T18:59:45Z"
    message: ReplicaSet "scdb-static-7779db99b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-09T19:49:12Z"
    lastUpdateTime: "2025-02-09T19:49:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
