kubernetes/configs/video-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: "2025-02-09T17:25:29Z"
  generation: 4
  labels:
    app: scdb-video
  name: scdb-video
  namespace: scdb-cnad
  resourceVersion: "705409"
  uid: 04be6cdf-99bc-40ac-86f9-58e9facf360a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scdb-video
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-10T02:41:49+08:00"
      creationTimestamp: null
      labels:
        app: scdb-video
    spec:
      containers:
      - image: harbor.leezhiwei.com/scdb_assg2/video-serv
        imagePullPolicy: Always
        name: video-serv
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-02-09T18:59:48Z"
    lastUpdateTime: "2025-02-09T18:59:48Z"
    message: ReplicaSet "scdb-video-5646cd7cc7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-09T19:08:39Z"
    lastUpdateTime: "2025-02-09T19:08:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
