kubernetes/configs/assessment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-02-09T17:43:55Z"
  labels:
    app: scdb-assessment
  name: scdb-assessment
  namespace: scdb-cnad
  resourceVersion: "694307"
  uid: ac63a3bb-86b3-48ef-b423-652cb7fd066f
spec:
  clusterIP: 10.101.23.173
  clusterIPs:
  - 10.101.23.173
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31599
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: scdb-assessment
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
