kubernetes/configs/healthguide-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-02-09T17:19:16Z"
  labels:
    app: scdb-healthguide
  name: scdb-healthguide
  namespace: scdb-cnad
  resourceVersion: "689719"
  uid: af56b3e6-d814-4564-85dc-891018a98692
spec:
  clusterIP: 10.109.168.222
  clusterIPs:
  - 10.109.168.222
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32272
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: scdb-healthguide
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
