kubernetes/configs/medqna-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: med42-endpoint
subsets:
  - addresses:
      - ip: 192.168.2.108
    ports:
      - port: 8000
