kubernetes/configs/medqna-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: med42-endpoint
spec:
  ports:
    - port: 8000
      targetPort: 8000
