kubernetes/configs/medqna-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-02-09T17:33:36Z"
  labels:
    app: scdb-medqna
  name: scdb-medqna
  namespace: scdb-cnad
  resourceVersion: "692370"
  uid: 6db9e90d-e06f-49e1-84e6-1e0dbc9e076f
spec:
  clusterIP: 10.97.237.100
  clusterIPs:
  - 10.97.237.100
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30108
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: scdb-medqna
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
