kubernetes/configs/static-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-02-09T17:13:07Z"
  labels:
    app: scdb-static
  name: scdb-static
  namespace: scdb-cnad
  resourceVersion: "688588"
  uid: 579baffa-7404-4442-b5fe-f57f3eeda357
spec:
  clusterIP: 10.97.14.204
  clusterIPs:
  - 10.97.14.204
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32504
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: scdb-static
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
